// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GridImage /> > should match snapshot for mobile 1`] = `
<div
  class="sc-hKDTPf dQeEnP"
  data-testid="section-background"
>
  <div
    class="sc-fmZSGO jTaCMN"
    data-testid="section-container"
  >
    <div
      class="sc-dYOLZc bRNHDL"
    >
      <h2
        class="sc-bXdtCk kIaZrI"
        data-testid="heading"
      >
        <span>
          <b
            style="font-size: 2rem;"
          >
            Tec
          </b>
        </span>
      </h2>
      <div
        class="sc-gwsNht gMeFfo"
        data-testid="text-component"
      >
        Conheça as principais tecnologias usadas neste projeto:
      </div>
      <div
        class="sc-jMpmlX ersnZw"
      >
        <div
          class="sc-jZhnRx kGoUZz"
        >
          <img
            alt="JavaScript Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            JavaScript Logo
          </h3>
        </div>
        <div
          class="sc-jZhnRx kGoUZz"
        >
          <img
            alt="React Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            React Logo
          </h3>
        </div>
        <div
          class="sc-jZhnRx kGoUZz"
        >
          <img
            alt="Next.js Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Next.js Logo
          </h3>
        </div>
        <div
          class="sc-jZhnRx kGoUZz"
        >
          <img
            alt="Node.js Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Node.js Logo
          </h3>
        </div>
        <div
          class="sc-jZhnRx kGoUZz"
        >
          <img
            alt="Git Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Git Logo
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridImage /> > should match snapshot with background 1`] = `
<div
  class="sc-hKDTPf iWmYXW"
  data-testid="section-background"
>
  <div
    class="sc-fmZSGO jTaCMN"
    data-testid="section-container"
  >
    <div
      class="sc-dYOLZc bRNHDL"
    >
      <h2
        class="sc-bXdtCk jQeZBr"
        data-testid="heading"
      >
        <span>
          <b
            style="font-size: 2rem;"
          >
            Tec
          </b>
        </span>
      </h2>
      <div
        class="sc-gwsNht gMeFfo"
        data-testid="text-component"
      >
        Conheça as principais tecnologias usadas neste projeto:
      </div>
      <div
        class="sc-jMpmlX ersnZw"
      >
        <div
          class="sc-hoLldG ecxfUX"
        >
          <img
            alt="JavaScript Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F6%2F6a%2FJavaScript-logo.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            JavaScript Logo
          </h3>
        </div>
        <div
          class="sc-hoLldG ecxfUX"
        >
          <img
            alt="React Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            React Logo
          </h3>
        </div>
        <div
          class="sc-hoLldG ecxfUX"
        >
          <img
            alt="Next.js Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Fv1662090959%2Ffront%2Fnextjs%2Ftwitter-card.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Next.js Logo
          </h3>
        </div>
        <div
          class="sc-hoLldG ecxfUX"
        >
          <img
            alt="Node.js Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Node.js Logo
          </h3>
        </div>
        <div
          class="sc-hoLldG ecxfUX"
        >
          <img
            alt="Git Logo"
            data-nimg="1"
            decoding="async"
            height="180"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Fgit-scm.com%2Fimages%2Flogos%2Fdownloads%2FGit-Icon-1788C.png&w=384&q=75 2x"
            style="color: transparent; width: 100%; height: auto; max-width: 180px; object-fit: contain; margin: 0px auto; display: block;"
            width="180"
          />
          <h3
            class="sc-bXdtCk ksXdHw"
            data-testid="heading"
          >
            Git Logo
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;
